Fix display hours (remove overflow in responsive mode for dhx_cal_data class)

--- a/src/assets/dhtmlxscheduler-responsive.css
+++ b/src/assets/dhtmlxscheduler-responsive.css
@@ -158,9 +158,9 @@ tr.dhx_grid_event td {
 	}
 
 	/*scheduler data*/
-	.dhx_cal_data {
+	/*.dhx_cal_data {
 		overflow-y: auto !important;
-	}
+	}*/
 
 	.grey_section, .red_section {
 		font-size: 14px !important;
